examples/SPA-Frontend-(React/Vue/Angular)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
  - name: http
    port: 80
    targetPort: 80
